syntax = "proto3";

package forum;

option go_package = "github.com/forum/forum-service/proto/forum";

// Forum Service definition
service ForumService {
  // Get all messages
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse) {}
  // Create a message
  rpc CreateMessage(CreateMessageRequest) returns (CreateMessageResponse) {}
  // Ban a message
  rpc BanMessage(BanMessageRequest) returns (BanMessageResponse) {}
  // Unban a message
  rpc UnbanMessage(UnbanMessageRequest) returns (UnbanMessageResponse) {}
}

// Message entity
message Message {
  int64 id = 1;
  int64 user_id = 2;
  string username = 3;
  string content = 4;
  string created_at = 5;
  bool is_banned = 6;
}

// GetMessages request and response
message GetMessagesRequest {
  int64 limit = 1;
  int64 offset = 2;
}

message GetMessagesResponse {
  repeated Message messages = 1;
  int64 total = 2;
}

// CreateMessage request and response
message CreateMessageRequest {
  int64 user_id = 1;
  string username = 2;
  string content = 3;
}

message CreateMessageResponse {
  Message message = 1;
}

// BanMessage request and response
message BanMessageRequest {
  int64 id = 1;
}

message BanMessageResponse {
  bool success = 1;
}

// UnbanMessage request and response
message UnbanMessageRequest {
  int64 id = 1;
}

message UnbanMessageResponse {
  bool success = 1;
} 